--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
  </head>
  <body>
-   <redoc spec-url='https://api.bol.com/retailer/public/apispec'></redoc>
+   <redoc spec-url='http://api.bol.com/retailer/public/apispec'></redoc>
    <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
  </body>
 </html>
