--- a/demo-documentation.html
+++ b/demo-documentation.html
@@ -21,7 +21,7 @@
 
       window.$docsify = {
           name: 'Retailer API demo documentation',
-          homepage: '/docs/demo-documentation.md',
+          homepage: './docs/demo-documentation.md',
         maxLevel: 1,
         mergeNavbar: true,
         search     : {
